--- a/MDK-ARM/oilwater/oilwater.build_log.htm
+++ b/MDK-ARM/oilwater/oilwater.build_log.htm
@@ -21,18 +21,18 @@ Target DLL:      Segger\JL2CM3.dll V2.99.34.0
 Dialog DLL:      TCM.DLL V1.36.1.0
  
 <h2>Project:</h2>
-E:\MCU\oilwater\MDK-ARM\oilwater.uvprojx
+E:\MCU\oilwater_v2.0\MDK-ARM\oilwater.uvprojx
 Project File Date:  09/20/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'oilwater'
 compiling platform.c...
-..\Src\platform.c(221): warning:  #177-D: function "InitTLC5620"  was declared but never referenced
+..\Src\platform.c(233): warning:  #177-D: function "InitTLC5620"  was declared but never referenced
   static void InitTLC5620(void)
 ..\Src\platform.c: 1 warning, 0 errors
 linking...
-Program Size: Code=10068 RO-data=292 RW-data=44 ZI-data=3284  
+Program Size: Code=10180 RO-data=292 RW-data=44 ZI-data=3284  
 FromELF: creating hex file...
 "oilwater\oilwater.axf" - 0 Error(s), 1 Warning(s).
 
